<resources>
    <string name="app_name">SHIELD</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_passwordC">Password Check</string>
    <string name="action_loginInfo">ID 찾기</string>
    <string name="action_passswordInfo">PW 찾기</string>
    <string name="action_sign_in">회원가입</string>
    <string name="action_login">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_email">Email</string>

    <string name="training">Training</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="title_activity_settings">Settings</string>

    <string name="grayscale">1. Grayscale</string>
    <string name="crop">Crop</string>
    <string name="eyeAlignment">2. Eye Alignment</string>
    <string name="gammaCorrection">1. Gamma Correction</string>
    <string name="doG">1. Difference of Gaussian</string>
    <string name="masking">2. Masking</string>
    <string name="lbp">3. Local Binary Pattern</string>
    <string name="histogrammEqualization">1. Histogramm Equalization</string>
    <string name="resize">1. Resize</string>

    <string name="eigenfaces">Eigenfaces with NN</string>
    <string name="imageReshaping">Image Reshaping with SVM</string>
    <string name="tensorflow">TensorFlow with SVM or KNN</string>
    <string name="caffe">Caffe with SVM or KNN</string>

    <string name="knn">K Nearest Neighbor</string>
    <string name="svm">Support Vector Machine</string>

    <string name="modelFileCaffe">VGG_FACE_deploy.prototxt</string>
    <string name="weightsFileCaffe">VGG_FACE.caffemodel</string>
    <string name="outputLayerCaffe">fc7</string>
    <string name="meanValuesCaffe">104, 117, 123</string>

    <string name="gamma">0.2</string>
    <string name="sigmas">0.25, 4</string>

    <string name="haarcascade_default">haarcascade_frontalface_default</string>
    <string name="haarcascade_alt">haarcascade_frontalface_alt</string>
    <string name="haarcascade_alt2">haarcascade_frontalface_alt2</string>
    <string name="lbpcascade">lbpcascade_frontalface</string>
    <string name="classifier_350kids">02_Classifier_350kids</string>
    <string name="classifier_200adults_350kids">01_Classifier_200adults_350kids</string>

    <string name="haarcascade_eye">haarcascade_eye</string>
    <string name="haarcascade_lefteye">haarcascade_lefteye_2splits</string>
    <string name="haarcascade_righteye">haarcascade_righteye_2splits</string>


    <string name="biometric_dialog_cancel">Cancel</string>
    <string name="biometric_dialog_title">지문 인증</string>
    <string name="biometric_dialog_subtitle">지문 확인 중</string>
    <string name="biometric_dialog_state_normal">지문 센서</string>
    <string name="biometric_dialog_state_failed">Failed to identify, please try again</string>
    <string name="biometric_dialog_state_error">Verification error, please enter payment password</string>
    <string name="biometric_dialog_state_error_enable_process">Verification error, setup failed</string>
    <string name="biometric_dialog_state_succeeded">Verification successful</string>
    <string name="biometric_dialog_use_password">RESTART</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="using_terms">
        제1장 총칙\n
\n
제1조(목적)본 약관은 SHIELD가 제공하는 모든 서비스(이하 "서비스")의 이용조건 및 절차, 이용자와 당 사이트의 권리, 의무, 책임사항과 기타 필요한 사항을 규정함을 목적으로 합니다.\n
\n
제2조(용어의 정의)본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
① 사용자 : 본 약관에 따라 본 어플리케이션이 제공하는 서비스를 이용할 수 있는 자.\n
② 가 입 : 본 어플리케이션이 제공하는 신청서 양식에 해당 정보를 기입하고, 본 약관에 동의하여 서비스 이용계약을 완료시키는 행위\n
③ 회 원 : 본 어플리케이션에 개인정보 등 관련 정보를 제공하여 회원등록을 한 개인(재외국민, 국내거주 외국인 포함)또는 법인으로서 본 어플리케이션의 정보를 제공 받으며, 본 어플리케이션이 제공하는 서비스를 이용할 수 있는 자.\n
④ 아이디(ID) : 회원의 식별과 서비스 이용을 위하여 회원이 문자와 숫자의 조합으로 설정한 고유의 체계\n
⑤ 비밀번호 : 사용자와 아이디가 일치하는지를 확인하고 통신상의 자신의 비밀보호를 위하여 이용자 자신이 선정한 문자와 숫자의 조합.\n
⑥ 본 약관에서 정의하지 않은 용어는 개별서비스에 대한 별도 약관 및 이용규정에서 정의하거나 일반적인 개념에 의합니다.\n
\n
제3조(약관의 효력과 변경)\n
① 어플리케이션은 귀하가 본 약관 내용에 동의하는 것을 조건으로 귀하에게 서비스를 제공할 것이며, 귀하가 본 약관의 내용에 동의하는 경우, 당 사이트의 서비스 제공 행위 및 귀하의 서비스 사용 행위에는 본 약관이 우선적으로 적용됩니다.\n
② 본 어플리케이션은 본 약관을 변경할 수 있으며, 변경된 약관은 어플리케이션 내에 공지함으로써 사용자가 직접 확인하도록 할 것입니다. 약관을 변경할 경우에는 적용일자 및 변경사유를 명시하여 어플리케이션 내에 그 적용일자 30일 전부터 공지합니다. 약관 변경 공지 후 사용자가 명시적으로 약관 변경에 대한 거부의사를 표시하지 아니하면, 사용자가 약관에 동의한 것으로 간주합니다. \n
\n
제4조(약관외 준칙)\n
① 본 약관은 어플리케이션이 제공하는 서비스에 관한 이용규정 및 별도 약관과 함께 적용됩니다.\n
② 본 약관에 명시되지 않은 사항은 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 전기통신기본법, 전기통신사업법, 정보통신윤리위원회심의규정, 정보통신 윤리강령, 프로그램보호법 등 관계법령과 개인정보 처리방침 및 행정안전부가 별도로 정한 지침 등의 규정에 따릅니다.\n
\n
제5조(회원정보의 통합관리)본 어플리케이션의 회원정보는 행정기관 타 사이트의 회원정보와 통합하여 관리될 수 있습니다.\n
\n
제2장 서비스 제공 및 이용\n
\n
제6조(이용 계약의 성립)\n
① 이용계약은 신청자가 온라인으로 본 어플리케이션에서 제공하는 소정의 가입신청 양식에서 요구하는 사항을 기록하고, 이 약관에 대한 동의를 완료한 경우에 성립됩니다.\n
② 본 어플리케이션은 다음 각 호에 해당하는 경우 그 사유가 해소될 때까지 이용계약 성립을 유보할 수 있습니다.\n
1. 기술상의 장애사유로 인한 서비스 중단의 경우(시스템관리자의 고의·과실 없는 디스크장애, 시스템다운 등)\n
2. 전기통신사업법에 의한 기간통신사업자가 전기통신 서비스를 중지하는 경우\n
3. 전시. 사변, 천재지변 또는 이에 준하는 국가 비상사태가 발생하거나 발생할 우려가 있는 경우\n
4. 긴급한 시스템 점검, 증설 및 교체설비의 보수 등을 위하여 부득이한 경우
5. 서비스 설비의 장애 또는 서비스 이용의 폭주 등 기타 서비스를 제공할 수 없는 사유가 발생한 경우\n
③ 본 어플리케이션이 제공하는 서비스는 아래와 같으며, 그 변경될 서비스의 내용을 이용자에게 공지하고 아래에서 정한 서비스를 변경하여 제공할 수 있습니다. 다만, 비회원에게는 서비스 중 일부만을 제공할 수 있습니다.\n
1. 당 사이트가 자체 개발하거나 다른 기관과의 협의 등을 통해 제공하는 일체의 서비스\n
\n
제7조(회원정보 사용에 대한 동의)\n
① 본 어플리케이션이 처리하는 모든 개인정보는 개인정보 보호법 등 관련 법령상의 개인정보보호 규정을 준수하여 이용자의 개인정보 보호 및 권익을 보호합니다.\n
② 본 어플리케이션은 다른 법령에 특별한 규정이 있는 경우를 제외하고 귀하가 본 어플리케이션 서비스 가입 시 동의하여 제공하는 정보에 한하여 최소한으로 수집합니다.\n
③ 본 어플리케이션은 행정기관 타 사이트간의 회원정보 통합관리와 관련하여 본인이 동의한 경우에는 개인정보 등 관련정보를 행정기관 타 사이트에 제공할 수 있습니다.\n
④ 회원이 본 어플리케이션에 본 약관에 따라 이용신청을 하는 것은 어플리케이션이 본 약관에 따라 신청서에 기재된 회원정보를 수집, 이용하는 것에 동의하는 것으로 간주됩니다.\n
⑤ 본 어플리케이션 회원정보의 진위여부 및 소속기관의 확인 등을 위하여 확인절차를 거칠 수도 있습니다.\n
\n
제8조(사용자의 정보 보안)\n
① 가입 신청자가 본 어플리케이션 서비스 가입 절차를 완료하는 순간부터 귀하는 입력한 정보의 비밀을 유지할 책임이 있으며, 회원의 ID와 비밀번호를 사용하여 발생하는 모든 결과에 대한 책임은 회원본인에게 있습니다.\n
② ID와 비밀번호에 관한 모든 관리의 책임은 회원에게 있으며, 회원의 ID나 비밀번호가 부정하게 사용되었다는 사실을 발견한 경우에는 즉시 본 어플리케이션에 신고하여야 합니다. 신고를 하지 않음으로 인한 모든 책임은 회원 본인에게 있습니다.\n
③ 사용자는 어플리케이션 서비스의 사용 종료 시마다 정확히 접속을 종료하도록 해야 하며, 정확히 종료하지 아니함으로써 제3자가 귀하에 관한 정보를 이용하게 되는 등의 결과로 인해 발생하는 손해 및 손실에 대하여 본 어플리케이션은 책임을 부담하지 아니합니다.\n
④ 비밀번호 분실 시 통보는 어플리케이션 비밀번호 찾기 서비스를 통해서 안내하며, 전 항의 규정에도 불구하고 회원의 이메일 주소 또는 휴대전화번호 기입 잘못은 본인 과실 및 본인 정보 관리 소홀로 발생하는 문제의 책임은 회원에게 있습니다.\n
⑤ 사용자는 개인정보 보호 및 관리를 위하여 서비스의 개인정보관리에서 수시로 개인정보를 수정/삭제할 수 있습니다.\n
\n
제9조(서비스 이용시간)\n
① 서비스 이용시간은 본 어플리케이션의 업무상 또는 기술상 특별한 지장이 없는 한 연중무휴, 1일 24시간을 원칙으로 합니다.\n
② 제1항의 이용시간은 정기점검 등의 필요로 인하여 본 어플리케이션이 정한 날 또는 시간은 예외로 합니다.\n
\n
부칙 본 약관은 2020년 7월 1일부터 시행됩니다.   \n
* 본 약관에 대한 저작권은 행정안전부에 귀속하며 무단 복제, 배포, 전송, 기타 저작권 침해행위를 엄금합니다.\n
    </string>

    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_title">Default Channel</string>
</resources>
