<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="80dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"/>

    <EditText
        android:id="@+id/find_input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_id"
        android:textSize="25dp"
        android:layout_margin="5dp"
        android:padding="7dp"
        android:singleLine="true"
        android:maxLength="20"
        android:height="50dp"
        android:selectAllOnFocus="true"
        android:background="@drawable/rounded_rectangle"
        android:textColorHint="@color/colorPrimaryText"/>

    <EditText
        android:id="@+id/find_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:textSize="25dp"
        android:layout_margin="5dp"
        android:padding="7dp"
        android:height="50dp"
        android:selectAllOnFocus="true"
        android:background="@drawable/rounded_rectangle"
        android:singleLine="true"
        android:maxLength="30"
        android:textColorHint="@color/colorPrimaryText"/>
    <Button
        android:id="@+id/find_pw_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="비밀번호 찾기"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="@color/colorPrimaryText"
        android:layout_margin="20px"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_rounded"
        android:textSize="25dp"
        />


</LinearLayout>